--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20177,6 +20177,10 @@ button.close {
   color: white !important;
 }
 
+.fa-1-5x {
+  font-size: 1.5em;
+}
+
 .content-header > h1 {
   margin-left: 15px;
 }
@@ -20190,7 +20194,13 @@ button.close {
 }
 
 .listing-box-header {
-  padding-bottom: 0px;
+  /*  padding-bottom: 0px; */
+}
+
+.box-tools {
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 .header-elements-wrapper {
@@ -20233,6 +20243,7 @@ button.close {
 .listing-box-anchor {
   overflow: auto;
   padding: 0px;
+  position: relative;
 }
 
 .quantity-needed-input {
@@ -20374,5 +20385,177 @@ button.close {
 
 .volunteer-box-body-wrapper {
   padding-top: 20px;
+}
+
+.comments-wrapper {
+  overflow: auto;
+}
+
+.new-comment-form {
+  overflow: auto;
+}
+
+.new-comment-wrapper {
+  margin-bottom: 5px;
+  margin-left: 70px;
+  margin-right: 70px;
+}
+
+.new-comment-wrapper button {
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+.existing-comments-wrapper {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.comment-row {
+  position: relative;
+  margin-bottom: 5px;
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+.comment-image {
+  position: absolute;
+  bottom: 0;
+}
+
+.my-comment-image {
+  right: 0;
+  margin-right: -60px;
+}
+
+.other-comment-image {
+  left: 0;
+  margin-left: -60px;
+}
+
+.comment-image img {
+  width: 50px;
+}
+
+.comment-bubble {
+  padding: 10px;
+  overflow: auto;
+}
+
+.my-comment-bubble {
+  color: white;
+  background: #0084ff;
+  -webkit-border-radius: 10px;
+  -webkit-border-bottom-right-radius: 0;
+  -moz-border-radius: 10px;
+  -moz-border-radius-bottomright: 0;
+  border-radius: 10px;
+  border-bottom-right-radius: 0;
+}
+
+.other-comment-bubble {
+  color: black;
+  background: #ddd;
+  -webkit-border-radius: 10px;
+  -webkit-border-bottom-left-radius: 0;
+  -moz-border-radius: 10px;
+  -moz-border-radius-bottomleft: 0;
+  border-radius: 10px;
+  border-bottom-left-radius: 0;
+}
+
+.comment-text {
+  font-size: 16px;
+  float: left;
+  text-align: left;
+}
+
+.comment-text span {
+  float: left;
+}
+
+.comment-header {
+  font-weight: bold;
+  float: left;
+  position: relative;
+  padding-right: 45px;
+}
+
+.comment-header span {
+  float: left;
+  margin-right: 10px;
+  text-align: left;
+}
+
+.comment-edited {
+  font-size: 12px;
+  margin-top: 3px;
+}
+
+.my-comment-edited {
+  color: #ddd;
+}
+
+.other-comment-edited {
+  color: #676767;
+}
+
+.comment-time {
+  color: #003f79;
+}
+
+.comment-controls {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: none;
+}
+
+.my-comment-bubble:hover .comment-controls {
+  display: block;
+}
+
+.comment-controls a {
+  color: white;
+  margin-right: 5px;
+}
+
+.comment-row {
+  position: relative;
+  margin-bottom: 5px;
+}
+
+@media screen and (max-width: 991px) {
+  .new-comment-wrapper {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .comment-controls {
+    display: block;
+  }
+
+  .my-comment-row {
+    margin-left: 0px;
+  }
+
+  .other-comment-row {
+    margin-right: 0px;
+  }
+}
+
+.comment-hr {
+  margin-bottom: 5px;
+  opacity: 0.35;
+}
+
+.my-comment-hr {
+  border-color: #ddd;
+}
+
+.other-comment-hr {
+  border-color: gray;
 }
 
