--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,7 @@
 //Admin-LTE
 @import "AdminLTE";
 @import "Listings";
+@import "admin";
 @import "~admin-lte/dist/css/AdminLTE.css";
 @import "~admin-lte/dist/css/skins/_all-skins.css";
 
