--- a/resources/assets/sass/Listings.scss
+++ b/resources/assets/sass/Listings.scss
@@ -145,11 +145,11 @@
   margin-bottom: 2px;
 }
 
-.volunteer-image-wrapper {
+.two-col-layout-image-wrapper {
 /*  width: 150px; */
 }
 
-.volunteer-image-wrapper img {
+.two-col-layout-image-wrapper img {
   width: 100%;
   max-width: 225px;
 }
@@ -168,30 +168,30 @@
   max-width: 225px;
 }
 
-.volunteer-listing-title {
+.two-col-layout-listing-title {
   font-size: 20px;
   font-weight: bold;
 }
 
-.volunteer-image-preview {
+.two-col-layout-image-preview {
   float: left;
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 
-.volunteer-image-preview img {
+.two-col-layout-image-preview img {
   width: 50px;
 }
 
 .volunteer-info-wrapper {
-  margin-top: 30px;
   font-size: 16px;
 }
 
-.volunteer-image-preview {
-  margin-bottom: 10px;
+.volunteer-info-wrapper {
+  margin-top: 30px;
 }
 
-.volunteer-box {
+.two-col-layout-box {
   margin-bottom: 10px;
 }
 
@@ -379,4 +379,15 @@
 
 .other-comment-hr {
   border-color: gray;
+}
+
+.admin-approve-title {
+  text-align: center;
+  font-size: 18px;
+}
+
+.admin-approve-wrapper {
+  background: #ddd;
+  overflow: auto;
+  padding: 10px;
 }
