--- a/resources/assets/sass/Listings.scss
+++ b/resources/assets/sass/Listings.scss
@@ -149,7 +149,7 @@
 /*  width: 150px; */
 }
 
-.two-col-layout-image-wrapper img {
+.two-col-layout-image-wrapper img, .volunteer-image-wrapper img {
   width: 100%;
   max-width: 225px;
 }
