--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20324,6 +20324,11 @@ button.close {
   background: #cde4f6;
 }
 
+.listing-info-box {
+  margin-bottom: 10px;
+  overflow: auto;
+}
+
 .donor-my-active-listings-box {
   background: #cde4f6;
 }
