--- a/resources/assets/sass/Listings.scss
+++ b/resources/assets/sass/Listings.scss
@@ -132,6 +132,11 @@
   background: #cde4f6;
 }
 
+.listing-info-box {
+  margin-bottom: 10px;
+  overflow: auto;
+}
+
 .donor-my-active-listings-box {
   background: #cde4f6;
 }
