--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -1,3 +1,84 @@
 .admin-body {
   background: #00a65a; //green
 }
+
+/* admin - add product */
+
+.admin-quantity-type-entry {
+  padding-right: 100px;
+  position: relative;
+}
+
+.admin-quantity-type-entry, .admin-quantity-type-entry div, .add-new-quantity-type-wrapper {
+  padding-left: 0;
+    padding-bottom: 5px;
+}
+
+.admin-quantity-type-radio {
+  width: 100px;
+  padding-right: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  text-align: right;
+}
+
+.admin-quantity-type-radio label {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.admin-quantity-type-radio label span {
+  margin-left: 15px;
+}
+
+.custom-radio-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.custom-radio-container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.custom-radio-container input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.custom-radio-container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.custom-radio-container .checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
