--- a/resources/assets/sass/Listings.scss
+++ b/resources/assets/sass/Listings.scss
@@ -138,6 +138,11 @@
   }
 }
 
+.listing-info-box-inside {
+  overflow: auto;
+  margin-bottom: 10px;
+}
+
 .listing-info-box {
   overflow: auto;
 }
@@ -195,10 +200,15 @@
 
 .volunteer-info-wrapper {
   font-size: 16px;
+  margin-top: 30px;
 }
 
-.volunteer-info-wrapper {
-  margin-top: 30px;
+.volunteer-info-change-button {
+  margin-top: 10px;
+}
+
+.volunteer-info-value {
+  font-weight: bold;
 }
 
 .two-col-layout-box {
