--- a/resources/assets/sass/Listings.scss
+++ b/resources/assets/sass/Listings.scss
@@ -173,7 +173,7 @@
   margin-top: 15px;
 }
 
-.profile-image img, .volunteer-image img {
+.profile-image img, .volunteer-image img, .edit-layout-image img {
   width: 100%;
   max-width: 225px;
 }
