--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20279,6 +20279,11 @@ button.close {
   color: #222d32;
 }
 
+.pickup-volunteer-wrapper {
+  padding-right: 20px !important;
+  padding-left: 20px !important;
+}
+
 .listing-input-wrapper div,
 .listing-input-wrapper span,
 .listing-pickup-volunteer div,
@@ -20612,6 +20617,21 @@ button.close {
 
 .email-not-confirmed-alert {
   padding: 5px 20px 5px 20px;
+}
+
+.add-more {
+  text-decoration: underline;
+  color: blue;
+}
+
+.rules-and-regulations {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.rules-and-regulations-hr {
+  margin-top: initial;
+  margin-bottom: initial;
 }
 
 .admin-body {
