--- a/resources/assets/sass/Listings.scss
+++ b/resources/assets/sass/Listings.scss
@@ -90,6 +90,11 @@
   color: #222d32;
 }
 
+.pickup-volunteer-wrapper {
+  padding-right: 20px !important;
+  padding-left: 20px !important;
+}
+
 .listing-input-wrapper div, .listing-input-wrapper span,
 .listing-pickup-volunteer div, .listing-pickup-volunteer span {
   padding-right: 0px;
@@ -418,4 +423,19 @@
 
 .email-not-confirmed-alert {
  padding: 5px 20px 5px 20px;
+}
+
+.add-more {
+  text-decoration: underline;
+  color: blue;
+}
+
+.rules-and-regulations {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.rules-and-regulations-hr {
+  margin-top: initial;
+  margin-bottom: initial;
 }
