--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,7 @@
 
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+@import url("https://fonts.googleapis.com/css?family=PT%20Sans");
 
 // Variables
 @import "variables";
@@ -20,3 +21,4 @@
 @import "~font-awesome/css/font-awesome.css";
 @import "~ionicons/dist/css/ionicons.css";
 @import "~raleway-cyrillic/raleway.css";
+//@import "~myriad-font/css/myriad.css";
