--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,8 +13,11 @@
 @import "AdminLTE";
 @import "Listings";
 @import "admin";
+@import "skin_green.css";
+@import "skin_red.css";
+@import "skin_blue_light.css";
 @import "~admin-lte/dist/css/AdminLTE.css";
-@import "~admin-lte/dist/css/skins/_all-skins.css";
+//@import "~admin-lte/dist/css/skins/_all-skins.css";
 
 
 //Font Awesome
