--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,6 +13,7 @@
 @import "AdminLTE";
 @import "Listings";
 @import "admin";
+@import "homepage.css";
 @import "skin_green.css";
 @import "skin_red.css";
 @import "skin_blue_light.css";
