--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19315,6 +19315,14 @@ button.close {
   background: #ddd;
 }
 
+.cancel-disabled {
+  opacity: 0.65;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  cursor: not-allowed;
+}
+
 .comments-wrapper {
   overflow: auto;
 }
