--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19202,6 +19202,10 @@ button.close {
   background: #d0e7af;
 }
 
+.cso-past-listing-box {
+  background: #ddd;
+}
+
 .cso-active-listing-box {
   /*  background: #ffdede; */
   background: #98cb4f;
@@ -19227,8 +19231,16 @@ button.close {
   background: #e4cccc;
 }
 
+.donor-my-past-listings-box {
+  background: #ddd;
+}
+
 .donor-listing-box-header {
   padding-bottom: 10px;
+}
+
+.listing-box-header-past {
+  background-color: #ddd;
 }
 
 .donor-listing-offer-button {
