--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19265,7 +19265,8 @@ button.close {
 .profile-image img,
 .volunteer-image img,
 .edit-layout-image img,
-.new-volunteer-image img {
+.new-volunteer-image img,
+.new-admin-image img {
   width: 100%;
   max-width: 225px;
 }
