--- a/resources/assets/sass/Listings.scss
+++ b/resources/assets/sass/Listings.scss
@@ -199,7 +199,8 @@
 }
 
 .profile-image img, .volunteer-image img,
-.edit-layout-image img, .new-volunteer-image img {
+.edit-layout-image img, .new-volunteer-image img,
+ .new-admin-image img {
   width: 100%;
   max-width: 225px;
 }
