--- a/resources/assets/sass/Listings.scss
+++ b/resources/assets/sass/Listings.scss
@@ -496,3 +496,9 @@
 .profile-footer a {
   margin-right: 5px;
 }
+
+/** free volunteers section **/
+#availability_table td,
+#availability_table th {
+  text-align: center;
+}
