--- a/resources/assets/sass/Listings.scss
+++ b/resources/assets/sass/Listings.scss
@@ -76,7 +76,9 @@
   color: rgb(34, 45, 50);
 }
 
-.quantity-needed-input {
+.quantity-needed-input,
+.quantity-reposted-input,
+.hub-quantity-needed-input {
   margin-right: -100px;
   float: left;
   width: 100%;
