--- a/resources/assets/sass/Listings.scss
+++ b/resources/assets/sass/Listings.scss
@@ -78,6 +78,7 @@
 
 .quantity-needed-input,
 .quantity-reposted-input,
+.hub-quantity-reposted-input,
 .hub-quantity-needed-input {
   margin-right: -100px;
   float: left;
